# libiter

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  index.html  mkinstalldirs  params.json
src/: ChangeLog  Makefile.am  Makefile.in  atpres.c  atpres.h  bi-cgstab.c  bi-cgstab.h  bicg.c  bicg.h  bicgstab.c  bicgstab.h  bico.c  bico.h  cg.c  cg.h  cg_.c  cgne.c  cgne.h  cgs.c  cgs.h  gmres.c  gmres.h  libiter.c  libiter.h  memory-check.h  myblas.c  myblas.h  orthomin.c  orthomin.h  qmr.c  qmr.h  steepest.c  steepest.h
test/: ChangeLog  Makefile  Makefile.test-libiter  check-cg-pc.c  check-cg-pc.h  check-gmres-m-pc.c  check-gmres-m-pc.h  check-gpb-pc.c  check-gpb-pc.h  check-iter-gen.c  check-iter-gen.h  check-otmk-pc.c  check-otmk-pc.h  check-sta-pc.c  check-sta-pc.h  check-sta2-pc.c  check-sta2-pc.h  check.c  check.h  ilu.c  ilu.h  test-libiter.c  toeplitz.c  toeplitz.h
